--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-please vist <a href="http://blog.xuzhougeng.top">blog.xuzhougeng.top</a>
+<div>
+  目前我的博客<a href="http://blog.xuzhougeng.top">blog.xuzhougeng.top</a>暂时不可访问, 如果需要搜索相关资料，可以在
+  <a href="https://www.jianshu.com/u/9ea40b5f607a">简书</a>或者<a href="http://xuzhougeng.blog.csdn.net/">CDSN</a>进行检索
+</div>
